unpackaged/main/default/objects/WorkOrder/fields/Additional_Information_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Needed__c</fullName>
    <label>Additional Information Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>