unpackaged/main/default/objects/WorkOrder/fields/Ahead_Of_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Ahead_Of_Compliance__c</fullName>
    <formula>Month_Suggested_Maintenance_date__c &gt; month_complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ahead Of Compliance</label>
    <type>Checkbox</type>
</CustomField>