unpackaged/main/default/objects/WorkOrder/fields/Approver_Planner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approver_Planner_Notes__c</fullName>
    <label>Approver/Planner Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>