unpackaged/main/default/objects/WorkOrder/fields/Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Description__c</fullName>
    <label>Asset Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>