unpackaged/main/default/objects/WorkOrder/fields/Asset_Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Search_Type__c</fullName>
    <label>Asset Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>Well</fullName>
            </value>
            <value>
                <fullName>Burner</fullName>
            </value>
            <value>
                <fullName>CGP</fullName>
            </value>
            <value>
                <fullName>Containment</fullName>
            </value>
            <value>
                <fullName>electrical</fullName>
            </value>
            <value>
                <fullName>Engine/Compressor</fullName>
            </value>
            <value>
                <fullName>Exchanger</fullName>
            </value>
            <value>
                <fullName>Flowline</fullName>
            </value>
            <value>
                <fullName>Gas Plant</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Pad</fullName>
            </value>
            <value>
                <fullName>Pawnee Plant</fullName>
            </value>
            <value>
                <fullName>Pigging</fullName>
            </value>
            <value>
                <fullName>Piping</fullName>
            </value>
            <value>
                <fullName>Pneu Blowcase</fullName>
            </value>
            <value>
                <fullName>Pneumatics</fullName>
            </value>
            <value>
                <fullName>PUMP</fullName>
            </value>
            <value>
                <fullName>Pumping Unit</fullName>
            </value>
            <value>
                <fullName>Rectifier</fullName>
            </value>
            <value>
                <fullName>Relief Valve</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Separator</fullName>
            </value>
            <value>
                <fullName>Skid FG Conditioner</fullName>
            </value>
            <value>
                <fullName>Skid Instrument Air Unit</fullName>
            </value>
            <value>
                <fullName>STAT Office</fullName>
            </value>
            <value>
                <fullName>Sump</fullName>
            </value>
            <value>
                <fullName>Tank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>