unpackaged/main/default/objects/WorkOrder/fields/Asset_Tier__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tier__c</fullName>
    <formula>TEXT(Asset.Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Tier</label>
    <type>Text</type>
</CustomField>