unpackaged/main/default/objects/WorkOrder/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Type_Picklist</valueSetName>
    </valueSet>
</CustomField>