unpackaged/main/default/objects/WorkOrder/fields/Assigned_Service_Resource3__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Service_Resource3__c</fullName>
    <formula>LastModifiedBy.Service_Resource_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Service Resource</label>
    <type>Text</type>
</CustomField>