unpackaged/main/default/objects/WorkOrder/fields/Budgeted__c.field-meta.xml
<CustomField>
    <fullName>Budgeted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budgeted</label>
    <type>Checkbox</type>
</CustomField>