unpackaged/main/default/objects/WorkOrder/fields/CAP_EX_WORK__c.field-meta.xml
<CustomField>
    <fullName>CAP_EX_WORK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please Check Box if WO is CAP EX Related</description>
    <inlineHelpText>Please Check Box if WO is CAP EX Related</inlineHelpText>
    <label>CAP EX WORK</label>
    <type>Checkbox</type>
</CustomField>