unpackaged/main/default/objects/WorkOrder/fields/COA__c.field-meta.xml
<CustomField>
    <fullName>COA__c</fullName>
    <label>COA Sub Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COA</valueSetName>
    </valueSet>
</CustomField>