unpackaged/main/default/objects/WorkOrder/fields/Completed_in_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Completed_in_Compliance__c</fullName>
    <formula>month_complete__c == Month_Suggested_Maintenance_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed in Compliance</label>
    <type>Checkbox</type>
</CustomField>