unpackaged/main/default/objects/WorkOrder/fields/Completed_in_Priority__c.field-meta.xml
<CustomField>
    <fullName>Completed_in_Priority__c</fullName>
    <formula>Days_to_Complete__c == 0-1-2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed in Priority</label>
    <type>Checkbox</type>
</CustomField>