unpackaged/main/default/objects/WorkOrder/fields/Completed_via_FSL_app__c.field-meta.xml
<CustomField>
    <fullName>Completed_via_FSL_app__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed via FSL app</label>
    <type>Checkbox</type>
</CustomField>