unpackaged/main/default/objects/WorkOrder/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Contractor)</relationshipLabel>
    <relationshipName>Work_Orders_Contractor</relationshipName>
    <type>Lookup</type>
</CustomField>