unpackaged/main/default/objects/WorkOrder/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <formula>Contractor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Name</label>
    <type>Text</type>
</CustomField>