unpackaged/main/default/objects/WorkOrder/fields/Cost_Line_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Cost_Line_Item_Total__c</fullName>
    <label>Work Order Cost Line Item Total</label>
    <summarizedField>Cost_Period_Line_Item__c.Cost__c</summarizedField>
    <summaryForeignKey>Cost_Period_Line_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>