unpackaged/main/default/objects/WorkOrder/fields/Cost_Period__c.field-meta.xml
<CustomField>
    <fullName>Cost_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Period</label>
    <referenceTo>Cost_Period__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>