unpackaged/main/default/objects/WorkOrder/fields/Created_via_FSL_App__c.field-meta.xml
<CustomField>
    <fullName>Created_via_FSL_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created via FSL App</label>
    <type>Checkbox</type>
</CustomField>