unpackaged/main/default/objects/WorkOrder/fields/Crew_Size__c.field-meta.xml
<CustomField>
    <fullName>Crew_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This controls the number of Service Appointments created when this Work Order is changed to Planned Status.</inlineHelpText>
    <label>Crew Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>