unpackaged/main/default/objects/WorkOrder/fields/Date_changed_to_awaiting_material__c.field-meta.xml
<CustomField>
    <fullName>Date_changed_to_awaiting_material__c</fullName>
    <label>Date changed to awaiting material</label>
    <type>DateTime</type>
</CustomField>