unpackaged/main/default/objects/WorkOrder/fields/Date_changed_to_awaiting_MOC__c.field-meta.xml
<CustomField>
    <fullName>Date_changed_to_awaiting_MOC__c</fullName>
    <label>Date changed to awaiting MOC</label>
    <type>DateTime</type>
</CustomField>