unpackaged/main/default/objects/WorkOrder/fields/Date_changed_to_canceled__c.field-meta.xml
<CustomField>
    <fullName>Date_changed_to_canceled__c</fullName>
    <label>Date changed to canceled</label>
    <type>DateTime</type>
</CustomField>