unpackaged/main/default/objects/WorkOrder/fields/Date_changed_to_cannot_complete__c.field-meta.xml
<CustomField>
    <fullName>Date_changed_to_cannot_complete__c</fullName>
    <label>Date changed to cannot complete</label>
    <type>DateTime</type>
</CustomField>