unpackaged/main/default/objects/WorkOrder/fields/Date_changed_to_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_changed_to_completed__c</fullName>
    <label>Date changed to completed</label>
    <type>DateTime</type>
</CustomField>