unpackaged/main/default/objects/WorkOrder/fields/Date_changed_to_in_progress__c.field-meta.xml
<CustomField>
    <fullName>Date_changed_to_in_progress__c</fullName>
    <label>Date changed to in progress</label>
    <type>DateTime</type>
</CustomField>