unpackaged/main/default/objects/WorkOrder/fields/Date_changed_to_planned__c.field-meta.xml
<CustomField>
    <fullName>Date_changed_to_planned__c</fullName>
    <label>Date changed to planned</label>
    <type>DateTime</type>
</CustomField>