unpackaged/main/default/objects/WorkOrder/fields/Date_changed_to_planning__c.field-meta.xml
<CustomField>
    <fullName>Date_changed_to_planning__c</fullName>
    <label>Date changed to planning</label>
    <type>DateTime</type>
</CustomField>