unpackaged/main/default/objects/WorkOrder/fields/Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete__c</fullName>
    <formula>CreatedDate  -  Completed_Date__c</formula>
    <inlineHelpText>This Field is the difference in days from Creation Date to Completion date</inlineHelpText>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>