unpackaged/main/default/objects/WorkOrder/fields/EAM_WO_Type__c.field-meta.xml
<CustomField>
    <fullName>EAM_WO_Type__c</fullName>
    <label>EAM WO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After the Fact</fullName>
            </value>
            <value>
                <fullName>Breakdown</fullName>
            </value>
            <value>
                <fullName>Bulletin/Warranty</fullName>
            </value>
            <value>
                <fullName>Calibration/Programming</fullName>
            </value>
            <value>
                <fullName>Corrective</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Equipment Transfer/Replacement</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>HSE Hazard</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>New Equipment/Upgrade</fullName>
            </value>
            <value>
                <fullName>Predictive</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Spill / Remediation</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>