unpackaged/main/default/objects/WorkOrder/fields/ENR_Supervision__c.field-meta.xml
<CustomField>
    <fullName>ENR_Supervision__c</fullName>
    <label>ENR Supervision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Start Of Job</fullName>
            </value>
            <value>
                <fullName>Supervise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>