unpackaged/main/default/objects/WorkOrder/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID for WorkOrder from CCI list</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>