unpackaged/main/default/objects/WorkOrder/fields/Failure_Fix_Code__c.field-meta.xml
<CustomField>
    <fullName>Failure_Fix_Code__c</fullName>
    <label>Failure/Fix Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MEC-GENERAL</fullName>
            </value>
            <value>
                <fullName>Not Completed: MEC-LEAKAGE</fullName>
                <label>MEC-LEAKAGE</label>
            </value>
            <value>
                <fullName>MEC-VIBRATION</fullName>
            </value>
            <value>
                <fullName>MEC-CLEARANCE/ALIGNMENT</fullName>
                <label>MEC-CLEARANCE/ALIGNMEN</label>
            </value>
            <value>
                <fullName>MEC-DEFORMATION</fullName>
            </value>
            <value>
                <fullName>MEC-LOOSENESS</fullName>
            </value>
            <value>
                <fullName>MEC-STICKING</fullName>
            </value>
            <value>
                <fullName>MAT-GENERAL</fullName>
            </value>
            <value>
                <fullName>MAT-CAVITATION</fullName>
            </value>
            <value>
                <fullName>MAT-CORROSION</fullName>
            </value>
            <value>
                <fullName>MAT-EROSION</fullName>
            </value>
            <value>
                <fullName>MAT-WEAR</fullName>
            </value>
            <value>
                <fullName>MAT-BREAKAGE</fullName>
            </value>
            <value>
                <fullName>MAT-FATIGUE</fullName>
            </value>
            <value>
                <fullName>MAT-OVERHEATING</fullName>
            </value>
            <value>
                <fullName>MAT-BURST</fullName>
            </value>
            <value>
                <fullName>INS-GENERAL</fullName>
            </value>
            <value>
                <fullName>INS-CONTROL FAILURE</fullName>
            </value>
            <value>
                <fullName>INS-NO SIGNAL/ALARM</fullName>
            </value>
            <value>
                <fullName>INS-FAULTY SIGNAL/ALARM</fullName>
            </value>
            <value>
                <fullName>INS-CALIBRATION</fullName>
            </value>
            <value>
                <fullName>INS-SOFTWARE FAILURE</fullName>
            </value>
            <value>
                <fullName>INS-COMMON MODE FAILURE</fullName>
            </value>
            <value>
                <fullName>ELC-GENERAL</fullName>
            </value>
            <value>
                <fullName>ELC-SHORT CIRCUITING</fullName>
            </value>
            <value>
                <fullName>ELC-OPEN CIRCUIT</fullName>
            </value>
            <value>
                <fullName>ELC-NO POWER/VOLTAGE</fullName>
            </value>
            <value>
                <fullName>ELC-FAULTY POWER/VOLTAGE</fullName>
            </value>
            <value>
                <fullName>ELC-EARTH/ISOLATION FAULT</fullName>
            </value>
            <value>
                <fullName>EXT-GENERAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>