unpackaged/main/default/objects/WorkOrder/fields/Formulated_Priority__c.field-meta.xml
<CustomField>
    <fullName>Formulated_Priority__c</fullName>
    <formula>CASE( TEXT(Asset.Tier__c) , &quot;A&quot;, 1, &quot;B&quot;, 5, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formulated Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>