unpackaged/main/default/objects/WorkOrder/fields/Maintenance_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Plan_Number__c</fullName>
    <formula>MaintenancePlan.MaintenancePlanNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Plan Number</label>
    <type>Text</type>
</CustomField>