unpackaged/main/default/objects/WorkOrder/fields/month_complete__c.field-meta.xml
<CustomField>
    <fullName>month_complete__c</fullName>
    <formula>MONTH(DATEVALUE( Time_Completed__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>month complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>