unpackaged/main/default/objects/WorkOrder/fields/Month_Suggested_Maintenance_date__c.field-meta.xml
<CustomField>
    <fullName>Month_Suggested_Maintenance_date__c</fullName>
    <formula>MONTH( SuggestedMaintenanceDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Suggested Maintenance date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>