unpackaged/main/default/objects/WorkOrder/fields/Out_Of_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Compliance__c</fullName>
    <formula>Month_Suggested_Maintenance_date__c &lt; month_complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out Of Compliance</label>
    <type>Checkbox</type>
</CustomField>