unpackaged/main/default/objects/WorkOrder/fields/Parts_Materials__c.field-meta.xml
<CustomField>
    <fullName>Parts_Materials__c</fullName>
    <label>Parts/Materials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>