unpackaged/main/default/objects/WorkOrder/fields/Parts_Required__c.field-meta.xml
<CustomField>
    <fullName>Parts_Required__c</fullName>
    <formula>MaintenancePlan.This_plan_requires_parts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parts Required</label>
    <type>Checkbox</type>
</CustomField>