unpackaged/main/default/objects/WorkOrder/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Picklist</valueSetName>
    </valueSet>
</CustomField>