unpackaged/main/default/objects/WorkOrder/fields/Procedures_Read__c.field-meta.xml
<CustomField>
    <fullName>Procedures_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedures Read</label>
    <type>Checkbox</type>
</CustomField>