unpackaged/main/default/objects/WorkOrder/fields/Procedures_Read_By__c.field-meta.xml
<CustomField>
    <fullName>Procedures_Read_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedures Read By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>