unpackaged/main/default/objects/WorkOrder/fields/Read_Date__c.field-meta.xml
<CustomField>
    <fullName>Read_Date__c</fullName>
    <label>Read Date</label>
    <type>DateTime</type>
</CustomField>