unpackaged/main/default/objects/WorkOrder/fields/Reason_Work_Could_Not_Be_Completed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Work_Could_Not_Be_Completed__c</fullName>
    <label>Reason Work Could Not Be Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Isolation</fullName>
            </value>
            <value>
                <fullName>Material Constraint</fullName>
            </value>
            <value>
                <fullName>MOC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personnel Contraint</fullName>
            </value>
            <value>
                <fullName>Priority Conflict</fullName>
            </value>
            <value>
                <fullName>Time Constraint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>