unpackaged/main/default/objects/WorkOrder/fields/Requires_Parts__c.field-meta.xml
<CustomField>
    <fullName>Requires_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Parts</label>
    <type>Checkbox</type>
</CustomField>