unpackaged/main/default/objects/WorkOrder/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOL - No Issue</fullName>
            </value>
            <value>
                <fullName>BOL - Separator</fullName>
            </value>
            <value>
                <fullName>Calibrate</fullName>
                <label>Calibrate – Bring any out of tolerance condition into tolerance</label>
            </value>
            <value>
                <fullName>I&amp;E</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
                <label>Repair – Manual maintenance action performed to restore an item to an acceptable operating state</label>
            </value>
            <value>
                <fullName>Replace</fullName>
                <label>Replace – Replacement of the item by a new, or refurbished, of the same type and make</label>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Slug</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>