unpackaged/main/default/objects/WorkOrder/fields/Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_ID__c</fullName>
    <formula>User__r.Service_Resource_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource ID</label>
    <type>Text</type>
</CustomField>