unpackaged/main/default/objects/WorkOrder/fields/Service_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_ID__c</fullName>
    <label>Service Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>