unpackaged/main/default/objects/WorkOrder/fields/Start_Work_Now__c.field-meta.xml
<CustomField>
    <fullName>Start_Work_Now__c</fullName>
    <label>Start Work Now</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Begin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>