unpackaged/main/default/objects/WorkOrder/fields/Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>Time_Completed__c</fullName>
    <label>Time Completed</label>
    <type>DateTime</type>
</CustomField>