unpackaged/main/default/objects/WorkOrder/fields/Total_duration__c.field-meta.xml
<CustomField>
    <fullName>Total_duration__c</fullName>
    <label>Total duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>