unpackaged/main/default/objects/WorkOrder/fields/Well_Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>Well_Stop_Number__c</fullName>
    <label>Well Stop Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>