unpackaged/main/default/objects/WorkOrder/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <length>2</length>
    <type>Text</type>
</CustomField>