unpackaged/main/default/objects/WorkOrder/recordTypes/Artificial_Lift.recordType-meta.xml
<RecordType>
    <fullName>Artificial_Lift</fullName>
    <active>true</active>
    <label>Artificial Lift</label>
</RecordType>