unpackaged/main/default/objects/WorkOrder/recordTypes/Corrective_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Corrective_Maintenance</fullName>
    <active>true</active>
    <label>Corrective Maintenance</label>
</RecordType>