unpackaged/main/default/objects/WorkOrder/recordTypes/Downtime.recordType-meta.xml
<RecordType>
    <fullName>Downtime</fullName>
    <active>true</active>
    <label>Downtime</label>
</RecordType>