unpackaged/main/default/objects/WorkOrder/recordTypes/ESG_Data.recordType-meta.xml
<RecordType>
    <fullName>ESG_Data</fullName>
    <active>true</active>
    <label>ESG Data</label>
</RecordType>