unpackaged/main/default/objects/WorkOrder/recordTypes/IOC_Tasks.recordType-meta.xml
<RecordType>
    <fullName>IOC_Tasks</fullName>
    <active>true</active>
    <label>IOC Tasks</label>
</RecordType>