unpackaged/main/default/objects/WorkOrder/recordTypes/Non_Corrective_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Non_Corrective_Maintenance</fullName>
    <active>true</active>
    <description>All Work that&#39;s classified as non Corrective. ( Installs, Cap Ex, Projects)</description>
    <label>Non Corrective Maintenance</label>
</RecordType>