unpackaged/main/default/objects/WorkOrder/recordTypes/Non_Downtime.recordType-meta.xml
<RecordType>
    <fullName>Non_Downtime</fullName>
    <active>true</active>
    <label>Non-Downtime</label>
</RecordType>