unpackaged/main/default/objects/WorkOrder/recordTypes/Predictive_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Predictive_Maintenance</fullName>
    <active>true</active>
    <label>Predictive Maintenance</label>
</RecordType>