unpackaged/main/default/objects/WorkOrder/recordTypes/Well_Stops.recordType-meta.xml
<RecordType>
    <fullName>Well_Stops</fullName>
    <active>true</active>
    <label>Well Stops</label>
</RecordType>