unpackaged/main/default/objects/WorkOrder/recordTypes/Work_Order_Request.recordType-meta.xml
<RecordType>
    <fullName>Work_Order_Request</fullName>
    <active>true</active>
    <label>Work Order Request</label>
</RecordType>