unpackaged/main/default/objects/WorkOrder/validationRules/Approver_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approver_Notes_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
  TEXT(Status)=&#39;Deferred&#39;,
  TEXT(Status)=&#39;Rejected&#39;
 ),
 ISBLANK(Approver_Planner_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Approver_Planner_Notes__c</errorDisplayField>
    <errorMessage>Please enter a reason for deferring/rejecting this Work Order Request.</errorMessage>
</ValidationRule>