unpackaged/main/default/objects/WorkOrder/validationRules/Time_Completed_Less_Time_Started.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Completed_Less_Time_Started</fullName>
    <active>true</active>
    <errorConditionFormula>Time_Started__c &gt;= Time_Completed__c</errorConditionFormula>
    <errorMessage>Time Completed must be later than Time Started</errorMessage>
</ValidationRule>